--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       margin:0 0 16px;
     }
 
-    /* ==== 按鈕：改成不使用 -webkit-text-fill-color，避免 LINE 看不到字 ==== */
+    /* ==== 按鈕：避免 LINE 文字消失 ==== */
     .btn {
       color:#111827;
       background:#fff;
@@ -200,9 +200,7 @@
       <input type="hidden" name="slot">
 
       <div class="row mt" style="display:flex; align-items:center; gap:10px;">
-        <!-- 改成 button, 不用 input -->
-        <button id="submitBtn" type="submit"
-                class="btn btn-primary" style="min-width:140px;">送出</button>
+        <button id="submitBtn" type="submit" class="btn btn-primary" style="min-width:140px;">送出</button>
         <button id="resetBtn" type="reset" class="btn">清空</button>
         <span id="submitMsg" class="muted"></span>
       </div>
@@ -221,7 +219,6 @@
     const $ = (s) => document.querySelector(s);
     const byName = (n) => document.querySelector(`[name="${n}"]`);
 
-    // 工具：日期轉 YYYY-MM-DD
     function toISODate(d) {
       const y = d.getFullYear();
       const m = String(d.getMonth()+1).padStart(2, "0");
@@ -235,51 +232,32 @@
       return x;
     }
 
-    // 取得現在時間（以分鐘表示）
     function getNowMin() {
       const now = new Date();
       return now.getHours()*60 + now.getMinutes();
+    }
+
+    // ISO 日期字串可用 lexicographical 比較（YYYY-MM-DD）
+    function isAfter(aISO, bISO) {
+      return aISO && bISO && aISO.localeCompare(bISO) > 0;
     }
 
     const MIN_07_00 = 7*60;
     const MIN_12_59 = 12*60 + 59;
     const MIN_13_00 = 13*60;
 
-    // 根據「現在時間 + 所選日期」決定可預約時段
-    function policyFor(dateStr) {
-      const nowMin = getNowMin();
-      const TODAY = toISODate(new Date());
-      const d = dateStr ? new Date(dateStr + "T00:00:00") : null;
-      const isToday = d && toISODate(d) === TODAY;
-
-      // 今天
-      if (isToday) {
-        if (nowMin >= MIN_13_00) {
-          // 超過 13:00，今天不能預約
-          return {
-            allowAM:false, allowPM:false, allowToday:false,
-            note:"現在時間超過 13:00，今天不可預約"
-          };
-        }
-        if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
-          // 7:00–12:59：只能預約下午
-          return {
-            allowAM:false, allowPM:true, allowToday:true,
-            note:"今天僅可預約下午（15:00–17:00）"
-          };
-        }
-        // 凌晨～早上 7 點以前：上午與下午都可
-        return {
-          allowAM:true, allowPM:true, allowToday:true,
-          note:"現在是凌晨／早上，今天可預約上午或下午"
-        };
+    // ===== 規則：只有「今天」才需要依現在時間限制 AM/PM；未來日期一律可選 AM/PM =====
+    function policyForToday(nowMin) {
+      // 13:00 之後：今天完全不能訂
+      if (nowMin >= MIN_13_00) {
+        return { allowAM:false, allowPM:false, allowToday:false, note:"現在時間超過 13:00，今天不可預約" };
       }
-
-      // 未來日期：不管現在幾點，上午下午都可
-      return {
-        allowAM:true, allowPM:true, allowToday:true,
-        note:"可預約上午或下午"
-      };
+      // 07:00–12:59：今天只能訂下午
+      if (nowMin >= MIN_07_00 && nowMin <= MIN_12_59) {
+        return { allowAM:false, allowPM:true, allowToday:true, note:"今天僅可預約下午（15:00–17:00）" };
+      }
+      // 00:00–06:59：今天上午/下午都可
+      return { allowAM:true, allowPM:true, allowToday:true, note:"現在是凌晨／早上，今天可預約上午或下午" };
     }
 
     // 控制「最小日期」
@@ -287,11 +265,15 @@
       const nowMin = getNowMin();
       const today = toISODate(new Date());
       const tomorrow = toISODate(addDays(new Date(),1));
+
+      // ✅ 關鍵修正：只有 >=13:00 才把最小日期推到明天
+      // 這樣 07:00–12:59 才能選「今天」並下「當天下午」訂單
       const minDate = (nowMin >= MIN_13_00) ? tomorrow : today;
 
       const orderDateEl = byName("orderDate");
       orderDateEl.min = minDate;
 
+      // 若目前 value 空白或早於 min，才強制改成 minDate
       if (!orderDateEl.value || orderDateEl.value < minDate) {
         orderDateEl.value = minDate;
       }
@@ -311,15 +293,11 @@
             sl = byName("slot");
 
       if (slot === AM.key) {
-        st.value = AM.start;
-        et.value = AM.end;
-        sl.value = AM.key;
+        st.value = AM.start; et.value = AM.end; sl.value = AM.key;
         optAM.setAttribute("aria-pressed","true");
         optPM.setAttribute("aria-pressed","false");
       } else if (slot === PM.key) {
-        st.value = PM.start;
-        et.value = PM.end;
-        sl.value = PM.key;
+        st.value = PM.start; et.value = PM.end; sl.value = PM.key;
         optAM.setAttribute("aria-pressed","false");
         optPM.setAttribute("aria-pressed","true");
       } else {
@@ -334,8 +312,23 @@
       const orderDateEl = byName("orderDate");
       const dateHelp = $("#dateHelp");
       const val = orderDateEl.value;
-      const pol = policyFor(val);
 
+      const today = toISODate(new Date());
+      const nowMin = getNowMin();
+
+      // ===== 方法二（強化版）：只要是「未來日期」（隔天/大後天/大大後天…）一律放行 AM/PM =====
+      if (isAfter(val, today)) {
+        setDisabled(optAM, false);
+        setDisabled(optPM, false);
+        dateHelp.textContent = "未來日期可預約上午或下午";
+
+        // 若目前選擇空白，就預設 AM（你可改成 PM 或保留不選）
+        if (!byName("slot").value) setSlot(AM.key);
+        return;
+      }
+
+      // ===== 走到這裡代表「今天」 =====
+      const pol = policyForToday(nowMin);
       dateHelp.textContent = pol.note;
 
       setDisabled(optAM, !pol.allowAM);
@@ -343,35 +336,30 @@
 
       const currentSlot = byName("slot").value;
 
-      // 如果目前選擇的時段已經不合法，就清空
-      if (currentSlot === AM.key && !pol.allowAM) {
-        setSlot(null);
-      } else if (currentSlot === PM.key && !pol.allowPM) {
-        setSlot(null);
-      }
+      // 若目前選擇不合法 → 清空
+      if (currentSlot === AM.key && !pol.allowAM) setSlot(null);
+      if (currentSlot === PM.key && !pol.allowPM) setSlot(null);
 
-      // 若尚未選擇任何時段，幫忙選一個可用的預設值
+      // 若尚未選擇 → 自動選可用的
       if (!byName("slot").value) {
         if (pol.allowAM)      setSlot(AM.key);
         else if (pol.allowPM) setSlot(PM.key);
         else                  setSlot(null);
       }
 
-      // 若今天完全不能訂單，自動跳到明天
-      const today = toISODate(new Date());
+      // 若今天完全不能訂（>=13:00），把日期推到明天
       if (!pol.allowToday && val === today) {
         orderDateEl.value = toISODate(addDays(new Date(),1));
-        refreshSlotLimit(); // 再跑一次，用明天的規則
+        refreshSlotLimit(); // 用明天（未來日期）規則再跑一次
       }
     }
 
-    // 統一做一次 minDate + slot 判斷
     function refreshAll() {
       enforceMinDate();
       refreshSlotLimit();
     }
 
-    // 點 AM/PM 按鈕
+    // 點 AM/PM
     optAM.addEventListener("click", ()=>{
       if (optAM.getAttribute("aria-disabled")==="true") return;
       setSlot(AM.key);
@@ -393,7 +381,6 @@
         }
         window.LIFF_READY = true;
 
-        // 讀 profile -> 用 userId 存預設資料
         try {
           const p = await liff.getProfile();
           window.__USER_ID__ = p.userId || "";
@@ -441,7 +428,7 @@
       }
     });
 
-    // ===== 送單流程 =====
+    // ===== 送單 =====
     $("#orderForm").addEventListener("submit", async (e)=>{
       e.preventDefault();
       const btn = $("#submitBtn"), msg = $("#submitMsg");
@@ -449,7 +436,7 @@
       msg.textContent = "送出中…";
       btn.disabled = true;
 
-      refreshAll();  // 再確認一次日期 / 時段規則
+      refreshAll();
 
       if (!byName("slot").value) {
         $("#slotErr").style.display = "block";
@@ -525,7 +512,6 @@
       }
     });
 
-    // 頁面載入：先 init LIFF，再設定日期 & 時段
     window.addEventListener("load", async () => {
       await initLiff();
       refreshAll();
@@ -533,4 +519,5 @@
   </script>
 </body>
 </html>
+
 
